feat: implementar ocupacion temporal de mesas
